--- a/Retrofit/Task1/app/build.gradle
+++ b/Retrofit/Task1/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 //    testImplementation 'junit:junit:4.+'
 //    androidTestImplementation 'com.android.support.test:runner:1.0.2'
 //    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
