update deploy settings

--- a/Retrofit/API/WebStore/WebStoreAPI/Properties/launchSettings.json
+++ b/Retrofit/API/WebStore/WebStoreAPI/Properties/launchSettings.json
@@ -21,6 +21,7 @@
     "prod": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "http://0.0.0.0:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
