--- a/Retrofit/API/WebStore/WebStoreAPI/appsettings.json
+++ b/Retrofit/API/WebStore/WebStoreAPI/appsettings.json
@@ -3,6 +3,7 @@
     "dev": "server=localhost;database=android_retrofit1;user=root;password=12345678",
     "prod": "server=scp.realhost.com.ua;database=location;user=rootuser;password=1jQ5bacz"
   },
+  "https_port": 443,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
