--- a/Retrofit/API/WebStore/WebStoreAPI/WebStoreAPI.csproj
+++ b/Retrofit/API/WebStore/WebStoreAPI/WebStoreAPI.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
+    <UserSecretsId>5bed43be-a389-4351-a83d-b8fcf980bb69</UserSecretsId>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
