--- a/Retrofit/API/WebStore/WebStoreAPI/Properties/launchSettings.json
+++ b/Retrofit/API/WebStore/WebStoreAPI/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://0.0.0.0:5001",
+      "applicationUrl": "https://0.0.0.0:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
       }
