--- a/Retrofit/API/WebStore/WebStoreAPI/appsettings.json
+++ b/Retrofit/API/WebStore/WebStoreAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "dev": "server=localhost;database=android_retrofit1;user=root;password=12345678",
-    "prod": "server=scp.realhost.com.ua;database=location;user=rootuser;password=1jQ5bacz"
+    "dev": "Server=scp.realhost.com.ua;Database=location_db;Uid=location;Pwd=1jQ5bacz1jQ5bacz;",
+    "prod": "Server=scp.realhost.com.ua;Database=location_db;Uid=location;Pwd=1jQ5bacz1jQ5bacz;"
   },
   "https_port": 443,
   "Logging": {
